--- a/templates/index.html
+++ b/templates/index.html
@@ -618,7 +618,7 @@
         $(".content").append(html);
         $("#textarea").val("");
         $(".content").scrollTop($(".content")[0].scrollHeight);
-        if(text.startsWith('new:')) send_time_str = get_time_str(send_time)
+        if(text.startsWith('YBCarryYGBB@0525-new:')) send_time_str = get_time_str(send_time)
         let chat_item = $('<div class="item item-left"><div class="avatar"><img src="./static/chatgpt.png" /></div><div class="bubble bubble-left markdown">正在等待回复</div></div>')
         $(".content").append(chat_item);
         $(".content").scrollTop($(".content")[0].scrollHeight);
