--- a/templates/index.html
+++ b/templates/index.html
@@ -714,4 +714,11 @@
         }
     });
 </script>
+    <!-- footer start -->
+    <div>
+        <p style="font-family:arial;">
+            Copyright&nbsp;&copy;&nbsp;2023&nbsp;Bernadette网络传媒&nbsp;版权所有&nbsp;Powered by YBCarry&nbsp;
+		</p>
+	</div>
+	<!-- footer end -->
 </html>
