--- a/templates/index.html
+++ b/templates/index.html
@@ -268,6 +268,7 @@
             display: none;
         }
 	.footer{
+		position: absolute;
 		width: 1280px;
 		color: #fffff;
 		text-align: center;
@@ -317,14 +318,14 @@
     <div class="menu" id="menu">
         <button class="menu-btn" id="copy-btn">复制</button>
         <button class="menu-btn" id="resend-btn">重新发送</button>
-	<p style="font-family:arial;">
-            Copyright&nbsp;&copy;&nbsp;2023&nbsp;Bernadette网络传媒&nbsp;版权所有&nbsp;Powered by YBCarry&nbsp;
-	</p>
+	
     </div>
 
     <!-- footer start -->
     <div class="footer">
-       
+       <p style="font-family:arial;">
+            Copyright&nbsp;&copy;&nbsp;2023&nbsp;Bernadette网络传媒&nbsp;版权所有&nbsp;Powered by YBCarry&nbsp;
+	</p>
      </div>
      <!-- footer end -->
 </body>
