--- a/templates/index.html
+++ b/templates/index.html
@@ -269,12 +269,12 @@
         }
 	.footer{
 		position: absolute;
-		width: 1280px;
+		width:100%;
+		bottom:5px;
 		color: #fffff;
 		text-align: center;
 		margin:8px auto;
 		padding-bottom: 10px;
-		overflow: hidden;
 		line-height: 25px;
 		border-top: 1px solid #DBDBDB;
 	    }
