--- a/templates/index.html
+++ b/templates/index.html
@@ -270,12 +270,11 @@
 	.footer{
 		position: absolute;
 		width:100%;
-		bottom:1px;
 		color: #fffff;
 		text-align: center;
-		margin:8px auto;
-		padding-bottom: 10px;
-		line-height: 25px;
+		margin:2px auto;
+		padding: 0.3rem 0;
+		line-height: 20px;
 		border-top: 1px solid #DBDBDB;
 	    }
     </style>
