--- a/templates/index.html
+++ b/templates/index.html
@@ -273,7 +273,7 @@
 		color: #fffff;
 		text-align: center;
 		margin:2px auto;
-		padding: 0.3rem 0;
+		padding-bottom: 1px;
 		line-height: 20px;
 		border-top: 1px solid #DBDBDB;
 	    }
