--- a/templates/index.html
+++ b/templates/index.html
@@ -270,9 +270,10 @@
 	.footer{
 		position: absolute;
 		width:100%;
+		bottom: 0px;
 		color: #fffff;
 		text-align: center;
-		margin:2px auto;
+		margin: 2px auto;
 		padding-bottom: 1px;
 		line-height: 20px;
 		border-top: 1px solid #DBDBDB;
